<resources>
    <string name="app_name">Calc_SzczepanMarzecki_wtorek_14</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="operationDiv">÷</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="operationMulti">x</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="operationSub">-</string>
    <string name="clear">C</string>
    <string name="number0">0</string>
    <string name="dot">.</string>
    <string name="operationAdd">+</string>
    <string name="operationEq">=</string>
    <string name="windowText">0</string>
    <string name="operationPerc">%</string>
    <string name="operationSqr">√</string>
</resources>