<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <TextView
                android:id="@+id/windowId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom|end"
                android:text="@string/windowText"
                android:textSize="72sp"
                android:singleLine="true"
                android:ellipsize="start"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/number1Id"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/number1"
                android:textColor="#000000"
                android:textSize="36sp" />

            <Button
                android:id="@+id/number2Id"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/number2"
                android:textColor="#000000"
                android:textSize="36sp" />

            <Button
                android:id="@+id/number3Id"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/number3"
                android:textColor="#000000"
                android:textSize="36sp" />

            <Button
                android:id="@+id/operationDivId"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/operationDiv"
                android:textColor="#000000"
                android:textSize="36sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/number4Id"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/number4"
                android:textColor="#000000"
                android:textSize="36sp" />

            <Button
                android:id="@+id/number5Id"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/number5"
                android:textColor="#000000"
                android:textSize="36sp" />

            <Button
                android:id="@+id/number6Id"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/number6"
                android:textColor="#000000"
                android:textSize="36sp" />

            <Button
                android:id="@+id/operationMultiId"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/operationMulti"
                android:textColor="#000000"
                android:textSize="36sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/number7Id"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/number7"
                android:textColor="#000000"
                android:textSize="36sp" />

            <Button
                android:id="@+id/number8Id"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/number8"
                android:textColor="#000000"
                android:textSize="36sp" />

            <Button
                android:id="@+id/number9Id"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/number9"
                android:textColor="#000000"
                android:textSize="36sp" />

            <Button
                android:id="@+id/operationSubId"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/operationSub"
                android:textColor="#000000"
                android:textSize="36sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/clearId"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/clear"
                android:textColor="#000000"
                android:textSize="36sp" />

            <Button
                android:id="@+id/number0Id"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/number0"
                android:textColor="#000000"
                android:textSize="36sp" />

            <Button
                android:id="@+id/dotId"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/dot"
                android:textColor="#000000"
                android:textSize="36sp" />

            <Button
                android:id="@+id/operationAddId"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/operationAdd"
                android:textColor="#000000"
                android:textSize="36sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/operationEqId"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/operationEq"
                android:textColor="#000000"
                android:textSize="36sp" />

            <Button
                android:id="@+id/percentId"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/operationPerc"
                android:textColor="#000000"
                android:textSize="36sp" />

            <Button
                android:id="@+id/sqrId"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/operationSqr"
                android:textColor="#000000"
                android:textSize="36sp" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>